# practice-projects

./: .gitignore  README.md
Blog-System/: README.md
Blog-System/apps/backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
Blog-System/apps/backend/models/: __init__.py  article.py  comment.py  like.py  message.py  notice.py  user.py
Blog-System/apps/backend/routers/: __init__.py  article.py  like.py  message.py  user.py
Blog-System/apps/backend/schemas/: __init__.py  article.py  comment.py  like.py  message.py  user.py
Blog-System/apps/backend/utils/: __init__.py  auth.py  jwt.py  redis_client.py  response.py  snowflake.py
ChatBot-Service/apps/: README.md
ChatBot-Service/apps/backend/: .env.example  config.py  main.py  openai_client.py  pyproject.toml  requirements.txt
ChatBot-Service/apps/backend/schemas/: __init__.py  chat.py
ChatBot-Service/apps/backend/static/: index.html
ShortLink-Service/: README.md  test.http
ShortLink-Service/apps/backend/: .env.example  config.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  utils.py
UserAuth-System/: README.md  test.http
UserAuth-System/apps/backend/: .env.example  config.py  main.py  pyproject.toml  redis_client.py  requirements.txt
UserAuth-System/apps/backend/models/: __init__.py  role.py  user.py  user_role.py
UserAuth-System/apps/backend/routers/: __init__.py  auth.py  role.py  user.py
UserAuth-System/apps/backend/schemas/: __init__.py  auth.py  common.py  role.py  user.py
UserAuth-System/apps/backend/utils/: __init__.py  auth.py  jwt.py
